1. cluster profiles panel header alignment on 1366 resolution fix 2. spaces between buttons and icons on the collapsible header panel in various pages were not consistent. fixed  it

--- a/server/webapp/WEB-INF/rails/webpack/views/components/buttons/index.scss
+++ b/server/webapp/WEB-INF/rails/webpack/views/components/buttons/index.scss
@@ -81,7 +81,7 @@
 
 .icon-doc {
   @include icon-before($type: $fa-var-file);
-  margin-right: 10px;
+  margin-left: 20px;
 
   &:before {
     margin: 5px 10px 5px -5px;
