--- a/server/webapp/WEB-INF/rails/webpack/views/components/key_value_pair/index.scss
+++ b/server/webapp/WEB-INF/rails/webpack/views/components/key_value_pair/index.scss
@@ -16,6 +16,7 @@
 @import "../../global/common";
 
 $key-value-pair-width: 200px;
+$title-element-width-xl: 280px;
 $title-element-width: 360px;
 
 .key-value-pair {
@@ -120,7 +121,11 @@ $title-element-width: 360px;
     font-size: 12px;
 
   }
-  @media (min-width: $screen-lg) {
+  @media (min-width: $screen-xl) {
+    font-size: 15px;
+    width:     $title-element-width-xl;
+  }
+  @media (min-width: $screen-xxl) {
     font-size: 15px;
     width:     $title-element-width;
   }
