--- a/server/webapp/WEB-INF/rails/webpack/views/pages/elastic_profiles/index.scss
+++ b/server/webapp/WEB-INF/rails/webpack/views/pages/elastic_profiles/index.scss
@@ -119,7 +119,7 @@ $disabled-text-color: #999;
 }
 
 .cluster-profile-crud-actions {
-  margin-left: 20px;
+  display: block;
 }
 
 .cluster-profile-details-header {
