--- a/server/webapp/WEB-INF/rails/webpack/views/pages/new_plugins/index.scss
+++ b/server/webapp/WEB-INF/rails/webpack/views/pages/new_plugins/index.scss
@@ -71,8 +71,8 @@ $collapse-icon-size: 25px;
 }
 
 .deprecation-warning-tooltip-wrapper {
-  position: static;
-  display:  inline-block;
+
+  display:      inline-block;
 
   &:hover {
     .deprecation-warning-tooltip-content {
